--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="shortcut icon" href="data:,"> <!-- to get rid of annoying favicon error in console -->
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
